--- a/days_of_life.css
+++ b/days_of_life.css
@@ -1,5 +1,6 @@
 body{
 	text-align: center;
+	background-color: #42bff4;
 }
 .title{
 	font-size: 100px;
@@ -7,4 +8,80 @@ body{
 }
 .form-input{
 	display: inline-block;
+}
+.select-wrapper{
+	width:20%;
+	display: inline-block;
+	position: relative;
+}
+.select-wrapper:hover{
+		color: #f39c12;
+}
+.select-wrapper::before {
+  font-family: fontawesome;
+  content: "\f0dd";
+  font-size: 20px;
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  color: #fff;
+	pointer-events: none;
+}
+select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  border: none;
+	width: 100%;
+  height: 40px;
+  padding-left: 10px;
+  background: url(FFFFFF-0.2.png) repeat;
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+	box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.3);
+  border-radius: 3px;
+	outline: none;
+	color: #666;
+	cursor: pointer;
+}
+select:focus::-ms-value {
+  background-color: transparent;
+}
+select::-ms-expand {
+  display: none;
+}
+.datePicker{
+	display: inline-block;
+	width: 20%;
+	height: 3%;
+	background: #2c3e50;
+	border-radius: .4em;
+	overflow: hidden;
+	color: white;
+	text-align: center;
+	font-size: 20px;
+}
+.birthday{
+	background: #2c3e50;
+	border-radius: .25em;
+	width: 20%;
+	text-align: center;
+	display: inline-block;
+	color: white;
+}
+input[type="date"]::-webkit-inner-spin-button{
+    display: none;
+}
+input[type="date"]::-webkit-clear-button{
+	display: none;
+}
+input[type="date"]::-webkit-calendar-picker-indicator:hover{
+    background-color: #2c3e50;
+		color: #f39c12;
+		transition: color 0.3s ease-in-out;
+}
+input[type="date"]::-webkit-calendar-picker-indicator{
+	opacity: 1;
+		transition: color 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
